--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ footer p {
     color: #0071e3;
 }
 .small-text {
-    font-size: 0.7em; /* Adjust the size as needed */
+    font-size: 0.7rem; /* Adjust the size as needed */
 }
 
 /* Responsive Design */
