--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,40 @@ a {
     color: inherit;
 }
 
+connectlink {
+    display: block;
+    font-size: 1.1em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: 0;
+    margin-right: 0;
+    color: #213a53;
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+connectlink::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(0, 113, 227); /* Transparent blue */
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+connectlink:hover {
+    transform: scale(1.15); /* Zoom in effect */
+}
+
+connectlink:hover::after {
+    opacity: 1; /* Show the blue highlight on hover */
+}
+
 /* Header and Navigation */
 header {
     position: fixed;
@@ -57,7 +91,7 @@ header {
 }
 
 .nav-links a:hover {
-    color: #0071e3;
+    color: rgb(0, 113, 227);
 }
 
 /* Hero Section */
