--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ connectlink {
     margin-bottom: 0.5em;
     margin-left: 0;
     margin-right: 0;
-    color: #213a53;
+    color: #345779;
     font-weight: bold;
     position: relative;
     display: inline-block;
